src/components/Rental/Rental.css
.rental-page {
  padding-left: 16px;
  padding-right: 16px;
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.car-search-input-field {
  justify-self: flex-start;
}

.rental-page .main-section {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-bottom: 20px;
}

.rental-page .main-body {
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-start;
  gap: 12px;
  max-width: 1600px;
}


.rental-page .no-cars-message {
  position: relative;
  display: flex;
  max-width: 300px;
  max-height: 400px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 1rem auto 1rem auto;
  text-align: center;
}

.rental-page .no-cars-message::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--neutral-color-background);
  z-index: 0; /* Behind the logo but above the container background */
  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
  border-radius: 12px;
}

.rental-page .no-cars-image {
  position: relative;
  width: 100%;
  height: auto;
  max-width: 685px;
}

.rental-page .no-cars-message-text {
  color: white;
  z-index: 1000000;
  font-size: var(--font-size-xl);
  margin-top: calc(-1*var(--spacing-xl));
}

.rental-page .search-cars-field {
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  border: 1px solid #C9C9CF;
  max-width: 300px;
  height: 40px;
  padding: 6px 12px;
  border-radius: 12px;
  gap: 6px;
  overflow: visible;
  justify-content: space-around;
}

.rental-page .search-cars-field.selected {
  border: 3px solid var(--secondary-color);
  padding: 4px 10px;
}

.rental-page .car-search-input-field {
  width: 100%;
  outline: none;
  border: none;
  caret-color: var(--secondary-color);
  line-height: 150%;
  margin: 0 0 0 6px;
}

  .car-search-input-field:focus {
    outline: none;
    caret-color: var(--secondary-color);
  }


.rental-page .sort-bar {
  display: flex;
  flex-direction: column;
  margin: 16px 0 16px 0;
  max-width: 1600px;
  width: 100%;
  gap: 16px;
}

.rental-page .sorting-inputs {
  display: flex;
  flex-direction: row;
}

.rental-page .sort-button {
  background-color: white;
  color: var(--main-color);
  position: relative;
  width: auto;
  height: auto;
  margin-right: 10px;
  border: none;
  border-bottom: var(--main-color) 1px solid;
}

.rental-page .sort-button:hover {
  border-bottom: var(--secondary-color) 1px solid;
}



.rental-page .filter-button {
  background-color: var(--secondary-button-color);
  color: black;
  position: relative;
  width: 165px;
  border-radius: 12px;
  height: 37px;
  margin-right: 10px;
  border: none;
  display: flex;
  align-items: center;
  gap: 10px;
}

.rental-page .filter-button:hover {
  background-color: var(--secondary-button-hover-color);
}

.rental-page .filter-button svg {
  fill: black;
  margin-bottom: -2px;
}

.rental-page .filter-button:hover svg {
}

/* Filter panel styles */
.rental-page .filter-panel {
  display: none; /* Hidden by default */
  overflow-y: auto;
}

.rental-page .filter-panel .filter-content {
  max-width: 100%;
}

.rental-page .panel-sort-button {
  background-color: white;
  color: var(--main-color);
  width: 100%;
  margin: 10px 0;
  padding: 8px;
  border: none;
  border-bottom: var(--main-color) 1px solid;
}

.rental-page .panel-sort-button:hover {
  border-bottom: var(--secondary-color) 1px solid;
}

.rental-page .close-button {
  margin-top: 12px;
  width: 90vw;
  height: 50px;
  border-radius: 12px;
  background-color: var(--secondary-color);
  color: white;
  border: none;
  padding: 5px 24px;
  font-size: var(--font-size-xl);
  cursor: pointer;
}

.rental-page .checkbox-label {
  display: flex;
  align-items: center;
  margin: 0; /* Remove default margin to rely on gap for spacing */
  color: var(--main-color);
  cursor: pointer;
  border-radius: 6px;
}

.rental-page .checkbox-label span {
  color: var(--main-color);
  padding: 8px 12px;
  cursor: pointer;
  border-bottom: white 1px solid;
  white-space: nowrap; /* Prevent text from wrapping within each checkbox */
}

.rental-page .checkbox-label span {
  background-color: var(--text-box-color);
  width: 90%;
  border-radius: 12px;
  color: var(--main-color);
  padding: 12px 24px;
  cursor: pointer;
  border-bottom: white 1px solid;
}


.rental-page .checkbox-group {
  display: flex;
  flex-direction: column;
  max-height: 300px;
}

.rental-page .checkbox-label {
  display: flex;
  align-items: center;
  margin: 5px 0;
  color: var(--main-color);
  cursor: pointer;
  accent-color: white;
}

.rental-page .checkbox-label input {
  margin-right: 8px;
  accent-color: var(--secondary-color);
}

/* hides the checkbox visually but remains accessible to screen readers */
.rental-page .checkbox-label input {
  position: absolute;
  opacity: 0;
}

.rental-page .checkbox-label span {
  background-color: var(--secondary-button-color);
  border-radius: 12px;
  color: var(--main-color);
  padding: 12px 24px;
  cursor: pointer;
}

.rental-page .checkbox-label span:hover {
 background-color: var(--secondary-button-hover-color);
}

.rental-page .checkbox-label input:checked + span {
  background-color: var(--main-color);
  color:white;

}


/* Adjustments for mobile filter panel */
.rental-page .filter-panel .filter-group {
  margin: 10px 0;
}

/* Dropdown styles for desktop */
.rental-page .dropdown-group {
  position: relative;
  margin-right: 15px;
  z-index: 101;
}

.rental-page .dropdown-button {
  background-color: var(--secondary-button-color);
  color: black;
  border: none;
  padding: 8px 12px;
  border-radius: 16px;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 5px;
  width: auto;

}

.rental-page .dropdown-button:hover {
  background-color: var(--secondary-button-hover-color);
}

.rental-page .dropdown-content {
  position: absolute;
  width: auto; /* Adjust width to fit content */
  white-space: nowrap; /* Prevents text wrapping */
  top: 100%;
  left: 0;
  background-color: white;
  box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.1);
  border-radius: 12px;
  padding: 10px;
  z-index: 20;
  overflow-y: auto;
  min-width: 200px;
  text-align: center;
}

.rental-page .dropdown-content.custom {
  text-align: left;
  min-width: 250px;
  display: flex;
}

.rental-page .car-selected-menu {
  width: 100%;
  display: flex;
  flex-direction: column;

  gap: 10px;
  margin-bottom: 20px;
}

.rental-page .clear-button {
  background-color: var(--hover-color);
  color: var(--main-color);
  border: none;
  padding: 8px 12px;
  border-radius: 16px;
  cursor: pointer;
}

.rental-page .clear-button:hover {
  background-color: var(--hover-color-darker);
  color: var(--main-color);
}

.rental-page .clear-button-mobile{
  background-color: var(--hover-color);
  color: var(--main-color);
  border: none;
  padding: 8px 12px;
  border-radius: 16px;
  cursor: pointer;
}

.rental-page .clear-button-mobile:hover {
  background-color: var(--hover-color-darker);
  color: var(--main-color);
}


@media screen and (min-width: 1001px) {
  .rental-page .filter-button {
    display: none;
  }
}

@media screen and (max-width: 1000px) {
  .rental-page {
    max-width: 999999px;
    min-width: 1px;
    width: 100%;
    align-items: center;
    justify-content: center;
  }

  .rental-page .sort-button {
    display: none;
  }

  .rental-page .clear-button {
    display: none;
  }

  .rental-page .filter-button {
    justify-content: center;
  }
  .rental-page .sort-bar .dropdown-group {
    display: none; /* Hide dropdowns on mobile */
  }

  .rental-page .filter-panel {
    display: block;
    position: fixed;
    top: 65px;
    left: 0;
    width: 100%;
    height: calc(100vh - 65px);
    background: white;
    z-index: 10;
    padding: 20px;
    box-sizing: border-box;
  }

  .rental-page .filter-content {
    margin-bottom: auto;
    flex-direction: column;
    gap: 10px;
    height: auto;
    overflow-y: auto;
  }

  .rental-page .checkbox-group {
    display: flex;
    flex-direction: row; /* Change to row to align checkboxes horizontally */
    gap: 10px; /* Add spacing between checkboxes */
    overflow-x: scroll;
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* IE and Edge */
  }

  .rental-page .checkbox-label {
    display: flex;
    align-items: center;
    margin: 0; /* Remove default margin to rely on gap for spacing */
    color: var(--main-color);
    cursor: pointer;
    border-radius: 6px;
  }

  .rental-page .checkbox-label span {
    color: var(--main-color);
    padding: 8px 12px;
    cursor: pointer;
    border-bottom: white 1px solid;
    white-space: nowrap; /* Prevent text from wrapping within each checkbox */
  }

  .rental-page .filter-panel .checkbox-group {
    flex-direction: row;
    flex-wrap: wrap; /* Prevent wrapping */
    gap: 5px;
  }

}

